# konductor

./: .gitignore  .prettierrc.json  LICENSE  README.md  RELEASE_WORKFLOW.md  angular.json  package-lock.json  package.json
.github/workflows/: build.yml  main.yml  pr.yml  release.yml
scripts/: release.sh
src/: index.html  main.ts  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: Configurations.rs  indicator.rs  main.rs  system_actions.rs  tray_linux.rs  windowsOS.rs
src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  no-right-click.directive.ts
src/app/ActionTray/actions/: actions.component.css  actions.component.html
src/app/ActionTray/left/: left.component.css  left.component.html  left.component.spec.ts  left.component.ts
src/app/ActionTray/right/: right.component.spec.ts
src/app/Indicators/indicator/: indicator.component.html  indicator.component.scss  indicator.component.spec.ts  indicator.component.ts  indicator.service.spec.ts  indicator.service.ts
src/app/home/: home.component.css  home.component.html  home.component.spec.ts  home.component.ts
