[package]
name = "konductor"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "konductor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = ["tray-icon"] }
tauri-plugin-log = "2.0.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = { version = "0.30", features = ["multithread"] }
auto-launch = "0.5.0"
tray-icon = "0.21.0"
image = { version = "0.25", default-features = false, features = ["png", "ico"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", features = ["v3_24"] }

[target.'cfg(target_os = "windows")'.dependencies]
# Windows-specific dependencies if needed

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific dependencies if needed

